# space-ground-segment

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  docker-compose.yml
.claude/: launch.json
.claude/agents/: README.md  architect.md  control-developer.md  payload-developer.md  product-owner.md  prompt-engineer.md
.github/workflows/: ci.yml
control/: README.md
control/simulator/: Dockerfile  PACKET_FORMAT.md  README.md  pyproject.toml
control/simulator/config/: default.toml
control/simulator/src/sgs_sim/: __init__.py  anomalies.py  ccsds.py  config.py  dynamics.py  events.py  hk.py  pus.py  receiver.py  sender.py  tc.py  verification.py
control/simulator/src/sgs_sim/cli/: __init__.py  main.py
control/simulator/tests/: conftest.py  test_anomalies.py  test_ccsds.py  test_cli.py  test_command_loop.py  test_dynamics.py  test_events.py  test_hk.py  test_pus.py  test_tc.py  test_verification.py
control/yamcs/: pom.xml
control/yamcs/src/main/java/com/example/myproject/: MyCommandPostprocessor.java
control/yamcs/src/main/yamcs/mdb/: xtce.xml
docs/: HANDOFF.md
docs/architecture/: overview.md
docs/icd/: ICD.md
docs/operations/: operations-guide.md
docs/specs/: .gitkeep  control.md  payload.md  shared.md
docs/srd/: SRD.md
docs/svp-svr/: SVP.md
payload/: Dockerfile  README.md  pyproject.toml
payload/config/: default.toml  fixture.toml
payload/fixtures/: .gitkeep  README.md  generate.py
payload/fixtures/l1_rbt_synthetic/: S7_BT_in.nc  S8_BT_in.nc  S9_BT_in.nc  flags_in.nc  geodetic_in.nc  xfdumanifest.xml
payload/fixtures/l2_wst_synthetic/: L2P.nc  xfdumanifest.xml
payload/src/pdgs/: __init__.py
payload/src/pdgs/catalogue/: __init__.py  models.py  repository.py
payload/src/pdgs/cli/: __init__.py  main.py
payload/src/pdgs/config/: __init__.py  paths.py  processing.py  version.py
payload/src/pdgs/ingestion/: __init__.py  datastore.py  ingest.py  integrity.py  metadata.py  readers.py
payload/src/pdgs/operations/: __init__.py  reprocess.py
payload/src/pdgs/processing/: __init__.py  product.py
payload/src/pdgs/processing/cloud_screening/: __init__.py  screen.py
payload/src/pdgs/processing/sst_retrieval/: __init__.py  retrieve.py
payload/src/pdgs/validation/: __init__.py  colocation.py  orchestrate.py  report.py  result.py  stats.py
payload/tests/: conftest.py
payload/tests/integration/: test_ingest_roundtrip.py  test_integration_placeholder.py  test_process_scene.py  test_reproducibility.py  test_validate_product.py
payload/tests/ivv/: test_ivv_coverage.py  test_ivv_placeholder.py
payload/tests/unit/: test_catalogue.py  test_cli.py  test_cloud_screening.py  test_colocation.py  test_config_processing.py  test_datastore.py  test_integrity.py  test_operations.py  test_readers.py  test_report.py  test_result.py  test_sst_retrieval.py  test_stats.py  test_validation_config.py  test_version.py
shared/: README.md  pyproject.toml
shared/src/sgs_shared/: __init__.py
shared/src/sgs_shared/anomaly/: __init__.py  mappers.py  models.py  repository.py
shared/src/sgs_shared/catalogue/: __init__.py  mappers.py  models.py  repository.py  seed.py
shared/src/sgs_shared/cli/: __init__.py  main.py
shared/src/sgs_shared/control_bridge/: __init__.py  yamcs.py
shared/src/sgs_shared/payload_bridge/: __init__.py  sqlite.py
shared/src/sgs_shared/time_service/: __init__.py  correlation.py
shared/tests/: conftest.py  test_anomaly_mappers.py  test_anomaly_models.py  test_anomaly_store.py  test_cli.py  test_control_bridge.py  test_mappers.py  test_models.py  test_payload_bridge.py  test_postgres_catalogue.py  test_time_service.py
viz/: README.md
viz/public/: index.html
viz/public/css/: style.css
viz/public/data/: sentinel3a.tle  snapshot.json
viz/public/js/: app.js  data.js
viz/tools/: export_snapshot.py
